--- a/node/generate-pages/template/list/template-list-contentwrapper--bestiary.hbs
+++ b/node/generate-pages/template/list/template-list-contentwrapper--bestiary.hbs
@@ -11,13 +11,19 @@
 
 	{{> "listWrpPagecontent" }}
 
-	<div class="ve-flex-vh-center mt-2 no-print best-ecgen__hidden">
-		<button type="button" class="btn btn-success btn-xs mr-2" id="btn-encounterbuild">Encounter Builder</button>
-		<div id="wrp-profbonusdice" class="ve-flex-v-center mr-2">
-			<button type="button" class="btn btn-default btn-xs" id="profbonusdice" title="See the Dungeon Master&apos;s Guide, p263.">Use Proficiency Dice</button>
+	<div class="ve-flex-vh-center mt-2 no-print mobile__ve-flex-col best-ecgen__hidden">
+		<div class="ve-flex-v-center mr-2 mobile__mb-2 mobile__mr-0">
+			<button type="button" class="btn btn-success btn-xs mr-2" id="btn-encounterbuild">Encounter Builder</button>
+			<div id="wrp-profbonusdice" class="ve-flex-v-center">
+				<button type="button" class="btn btn-default btn-xs" id="profbonusdice" title="See the Dungeon Master&apos;s Guide, p263.">Use Proficiency Dice</button>
+			</div>
 		</div>
-		<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Printer View</button>
-		<button type="button" class="btn btn-default btn-xs mr-2" id="btn-show-table" title="View and Download Creatures in Tabular Format">Table View</button>
+
+		<div class="ve-flex-v-center mr-2 mobile__mb-2 mobile__mr-0">
+			<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Printer View</button>
+			<button type="button" class="btn btn-default btn-xs" id="btn-show-table" title="View and Download Creatures in Tabular Format">Table View</button>
+		</div>
+
 		{{> "btngroupManager" }}
 	</div>
 
