--- a/node/generate-pages/template/list/template-list-contentwrapper--items.hbs
+++ b/node/generate-pages/template/list/template-list-contentwrapper--items.hbs
@@ -5,9 +5,12 @@
 
 	{{> "listWrpPagecontent" }}
 
-	<div class="ve-flex-vh-center mt-2 no-print">
-		<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Printer View</button>
-		<button type="button" class="btn btn-default btn-xs mr-2" id="btn-show-table" title="View and Download Items in Tabular Format">Table View</button>
+	<div class="ve-flex-vh-center mt-2 no-print mobile__ve-flex-col">
+		<div class="ve-flex-v-center mr-2 mobile__mb-2 mobile__mr-0">
+			<button type="button" class="btn btn-default btn-xs mr-2" id="btn-book">Printer View</button>
+			<button type="button" class="btn btn-default btn-xs" id="btn-show-table" title="View and Download Items in Tabular Format">Table View</button>
+		</div>
+
 		{{> "btngroupManager" }}
 	</div>
 </div>
